# SIMDCompressionAndIntersection

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  styles.css
.github/workflows/: ubuntu-arm.yml
advancedbenchmarking/: README.md
advancedbenchmarking/src/: budgetedtest.cpp
cmake/: SIMDCompressionAndIntersectionConfig.cmake.in
include/: VarIntG8IU.h  common.h  compositecodec.h  fastpfor.h  neon_sse.h  platform.h  simdfastpfor.h  util.h  varintgb.h
src/: simdpackedsearch.c  simdpackedselect.c  unit.cpp
tests/find_package/: CMakeLists.txt  main.cpp
